--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ crashlytics-build.properties
 
 UserSettings/
 UserSettings/Layouts/default-2021.dwlt
+ProjectSettings/Packages/com.unity.testtools.codecoverage/Settings.json
